--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -32,7 +32,7 @@
             <div class="kit-login-box">
                 <header>
 					<?cs if:config.isdaemon == 1 ?>
-                    <h2>字符云监控系统 - 演示版</h2>
+                    <h2>字符云监控系统 - <font color='red'>演示版</font></h2>
 					<?cs else ?>
                     <h1>字符云监控系统</h1>
 					<?cs /if ?>
