--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -24,7 +24,7 @@
 	<?cs /if ?>
 </head>
 
-<body class="kit-login-bg">
+<body class="kit-login-bg" style='overflow:hidden'>
 <div class="container demo-1">
     <div class="content">
         <div id="large-header" class="large-header">
