--- a/html/dmt_login_tween.html
+++ b/html/dmt_login_tween.html
@@ -76,7 +76,7 @@
                 </div>
 				<footer>
 					<?cs if:config.isdaemon == 1 ?>
-					<button style='float:left;width:120px;margin-left:10px;' title='站点访问数据' class="sexybutton sexysimple"><span class="chart_bar"><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></span></button>
+					<button style='float:left;width:120px;margin-left:10px;' title='站点访问数据展示' class="sexybutton sexysimple"><span class="chart_bar"><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></span></button>
 					<?cs else ?>
 					<button disabled style='float:left;width:120px;margin-left:10px;' title='站点访问数据' class="sexybutton sexysimple"><span class="chart_bar"><?cs var:config.today_acc ?> / <?cs var:config.total_acc ?></span></button>
 					<?cs /if ?>
