--- a/html/dwz_foot.html
+++ b/html/dwz_foot.html
@@ -1,11 +1,18 @@
-<div id="footer"> 
-	Copyright &copy; 2019-2020 字符云监控. &nbsp; 演示版域名
-	<a style='text-decoration:underline;' href='http://open.xrkmonitor.com' target='_blank'>open.xrkmonitor.com.</a>&nbsp;
-	<a style='text-decoration:underline;' href='http://beian.miit.gov.cn' target='_blank'>粤ICP备19024085号-1.</a>&nbsp;
-	<a style='text-decoration:underline;' href='#' onclick='djShowConnectInfo();'>联系我们</a>
-	. (建议使用 Chrome 或者 Firefox 浏览器)
-</div>
+<ul class="themeList" id="themeList">
+    <li theme="toptry"><div></div></li>
+</ul>
+Copyright &copy; 2019-2020 字符云监控. &nbsp; 演示版域名
+<a style='text-decoration:underline;' href='http://open.xrkmonitor.com' target='_blank'>open.xrkmonitor.com.</a>&nbsp;
+<a style='text-decoration:underline;' href='http://beian.miit.gov.cn' target='_blank'>粤ICP备19024085号-1.</a>&nbsp;
+. (建议使用 Chrome 或者 Firefox 浏览器)
 
+<ul class="langList">
+	<li>
+		<a style='text-decoration:underline;' href='#' onclick='djShowConnectInfo();'>
+			<img src="https://cms.publiccms.com/resource/themes/images/zh_TW.png" alt="繁體"/>联系我们
+		</a>
+	</li>
+</ul>
 
 <div id='df_dlg_show_connect' style='display:none'>
 	<div align='center' layoutH="42">
