--- a/html/dwz_js.html
+++ b/html/dwz_js.html
@@ -1,53 +1,15 @@
-<!--[if lte IE 9]>
-<script src="<?cs var:config.docpath?>js/speedup.js" type="text/javascript"></script>
-<![endif]-->
-
 <?cs if:config.notify_daemon ?>
 <script language="javascript" src="<?cs var:config.docpath?>js/dmt_xrkmonitor.js"></script>
 <?cs /if ?>
 
 <?cs if:config.xrkmonitor_debug==1 ?>
 <script src="<?cs var:config.docpath?>js/dmt.comm.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery-1.7.2.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery.md5.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery.cookie.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery.validate.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery.bgiframe.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/jquery.highlight-3.js"></script>
-<script src="<?cs var:config.docpath?>js/jquery.json-2.3.js"></script>
-<script src="<?cs var:config.docpath?>js/dwz.core.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.util.date.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.validate.method.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.barDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.drag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.tree.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.accordion.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.ui.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.theme.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.switchEnv.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.alertMsg.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.contextmenu.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.navTab.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.tab.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.resize.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.dialog.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.dialogDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.sortDrag.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.cssTable.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.stable.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.taskBar.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.ajax.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.pagination.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.database.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.datepicker.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.effects.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.panel.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.checkbox.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.history.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.combox.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/dwz.print.js" type="text/javascript"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery-1.9.1.min.js"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.cookie.js"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.validate.js"></script>
+<script src="<?cs var:config.docpath?>resource/js/jquery.bgiframe.js"></script>
+<script src="<?cs var:config.docpath?>resource/js/dwz.min.js?1"></script>
 <script src="<?cs var:config.docpath?>js/dwz.regional.zh.js" type="text/javascript"></script>
-<script src="<?cs var:config.docpath?>js/frank_calendar.js"></script>
 <script src="<?cs var:config.docpath?>js/echarts.min.js"></script>
 <script src="<?cs var:config.docpath?>js/china.js"></script>
 <?cs else ?>
@@ -61,27 +23,9 @@
 
 <script type="text/javascript">
 
-var g_siteInfo;
-function djUserCenter()
-{
-	$('#dh_left_user').trigger('click');
-}
-
-function djShowConnectInfo()
-{
-	var op = { mask:true, maxable:false, height:400, width:420, resizable:false, drawable:true };
-	$.pdialog.openLocal(
-		'df_dlg_show_connect', 'df_dlg_show_connect', '联系我们', op);
-}
-
-function djOnReadyOk()
-{
-	// 主页相关逻辑
-	dcOnMainPage();
-	dcInitMainPage();
-	dcRefreshStatInfo();
-	setTimeout(function(){ $('#navMenuLast a').click(); }, 100);
-}
+var g_di_cspath = '<?cs var:config.cspath ?>';
+var g_di_docpath = '<?cs var:config.docpath ?>';
+var g_di_cgipath = '<?cs var:config.cgipath?>';
 
 /* localStorage 浏览器兼容问题 fix */
 if (!window.localStorage) {
@@ -112,27 +56,26 @@ if (!window.localStorage) {
   window.localStorage.length = (document.cookie.match(/\=/g) || window.localStorage).length;
 }
 
+function djOnReadyOk()
+{
+	// 主页相关逻辑
+	dcOnMainPage();
+	dcInitMainPage();
+	dcRefreshStatInfo();
+	setTimeout(function(){ $('#navMenuLast a').click(); }, 100);
+}
+
 $(document).ready(function(){
-	DWZ.init("<?cs var:config.docpath?>dwz.frag.xml", {
-		loginUrl:"login_dialog.html", loginTitle:"登录",	// 弹出登录对话框
+	DWZ.init("<?cs var:config.docpath?>resource/dwz.frag.html", {
 		statusCode:{ok:200, error:300, timeout:301}, //【可选】
 		pageInfo:{pageNum:"pageNum", numPerPage:"numPerPage", orderField:"orderField", orderDirection:"orderDirection"}, //【可选】
 		debug:false,	// 调试模式 【true|false】
 		callback:function(){
 			initEnv();
-			// 检查下浏览器是否支持
-			if(!dmtIsExplorerSupport())
-			{
-				alertMsg.warn(
-					"尊敬的用户您好，控制台目前只支持 Chrome 和 Firefox 浏览器，请更换浏览器后重新登陆。"
-				);
-				return;
-			}
 
 			// global info for javascript use
 			g_siteInfo = $.parseJSON('<?cs var:config.site_info ?>');
-
-			$("#themeList").theme({themeBase:g_siteInfo.doc_path+"themes"}); 
+			$("#themeList").theme({themeBase:"<?cs var:config.docpath?>resource/themes",defaultTheme:"toptry"});
 
 			$("#a_logout").click(function(){
 				var d = new Date();
