--- a/html/main_meta.html
+++ b/html/main_meta.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <meta http-equiv="Cache-Control" content="no-store, must-revalidate">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="pragma" content="no-cache">
@@ -7,5 +8,6 @@
 <meta name="author" content="rockdeng,xrkmonitor@163.com,qq:1820140912">
 <meta name="copyright" content="rockdeng">
 <meta name="renderer" content="webkit">
+<meta name="viewport" content="width=device-width,initial-scale=0.6">
 <title>字符云监控系统</title>
 
