--- a/html/dwz_index.html
+++ b/html/dwz_index.html
@@ -20,7 +20,7 @@
 
 <body scroll="no">
 	<header>
-		<?cs include:config.cspath+"dwz_header_base.html" ?>
+		<?cs include:config.cspath+"dwz_header.html" ?>
 	</header>
 	<main>
 		<?cs include:config.cspath+"dwz_container.html" ?>
