--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,18 +1,19 @@
-<div id="navMenu">
-	<ul>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr"><span>监控点上报查看</span></a></li>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_log"><span>日志上报查看</span></a></li>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m"><span>上报管理</span></a></li>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><span>监控插件</span></a></li>
+<a class="logo" href="./"><img src="resource/logo.png"/></a>
+<ul class="nav">
+	<li><a href="#" id='dh_init_change_pwd'><i class="icon-user icon-large"></i> 修改密码</a></li>
+	<li><a href="#" id="a_logout"><i class="icon-user icon-large"></i> <?cs var:comm.user_name ?></a></li>
+	<li><a href="logout.do?userId=2" title="退出登录"><i class="icon-signout icon-large"></i> 退出</a></li>
+</ul>
 
-		<?cs if:comm.user_type == 1 ?>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_left_user'><span>用户管理</span></a></li>
-		<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv"><span>系统服务器</span></a></li>
-		<!--
-		<li id='navDocMenu'><a href="/monitor/dmt_help_doc.html"><span>帮助文档</span></a></li>
-		-->
-		<?cs /if ?>
-		<li class="selected" id='navMenuLast'><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_main"><span>我的主页</span></a></li>
-	</ul>
-</div>
+<ul id="navMenu">
+	<li class="selected"><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr">监控点上报查看</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_log">日志上报查看</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m">上报管理</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-user icon-large"></i>监控插件</a></li>
+
+	<?cs if:comm.user_type == 1 ?>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_left_user'>用户管理</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv">系统服务器</a></li>
+	<?cs /if ?>
+</ul>
 
