--- a/html/dwz_left_user.html
+++ b/html/dwz_left_user.html
@@ -1,4 +1,8 @@
 <div class="accordion" fillSpace="sidebar">
+	<div class="accordionHeader">
+		<h2><i class="icon-check-sign icon-large"></i>用户管理<i class="icon icon-chevron-up"></i></h2>
+	</div>
+
 	<div class="accordionContent">
 		<ul class="tree treeFolder">
 			<li><a href="<?cs var:config.cgipath?>mt_slog_user?action=user_center" target="navTab" rel="dmt_user_center">账号中心</a></li>
