--- a/html/dmt_page_para.html
+++ b/html/dmt_page_para.html
@@ -1,5 +1,6 @@
 <input type="hidden" name="pageNum" value="<?cs var:config.currentPage ?>" />
 <input type="hidden" name="numPerPage" value="<?cs var:config.numPerPage ?>" />
-<input type="hidden" name="orderField" value="" />
+<input type="hidden" name="orderField" value="<?cs var:config.orderField ?>" />
+<input type="hidden" name="orderDirection" value="<?cs var:config.orderDirection ?>" />
 <input type="hidden" name="orderType" value="" />
 
