--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -6,14 +6,11 @@
 </ul>
 
 <ul id="navMenu">
-	<li class="selected"><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr">监控点上报查看</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_log">日志上报查看</a></li>
+	<li class="selected"><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_attr">上报查看</a></li>
 	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_m">上报管理</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-user icon-large"></i>监控插件</a></li>
-
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_plus"><i class="icon-user icon-large"></i>监控扩展</a></li>
 	<?cs if:comm.user_type == 1 ?>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_user" id='dh_left_user'>用户管理</a></li>
-	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv">系统服务器</a></li>
+	<li><a href="<?cs var:config.cgipath?>mt_slog_monitor?action=left_syssrv">系统管理</a></li>
 	<?cs /if ?>
 </ul>
 
