--- a/html/dwz_header.html
+++ b/html/dwz_header.html
@@ -1,4 +1,4 @@
-<a class="logo" href="./"><img src="resource/logo.png"/></a>
+<a class="logo" href="#"><img src="<?cs var:config.docpath ?>resource/xrk_logo.png"/></a>
 <ul class="nav">
 	<li><a href="#" id='dh_init_change_pwd'><i class="icon-key icon-large"> 修改密码</i></a></li>
 	<li><a href="#" id="a_logout"><i class="icon-user icon-large"></i> <?cs var:comm.user_name ?></a></li>
